[gd_scene load_steps=3 format=3]

[ext_resource type="PackedScene" uid="base_ui" path="res://Scenes/UI/BaseUI.tscn"]
[ext_resource type="Script" path="res://Scripts/UI/CharacterCreationUI.gd" id="1_vhs1i"]

[node name="CharacterCreationUI" instance=ExtResource("base_ui")]
script = ExtResource("1_vhs1i")

[node name="Title" parent="Layout/TopBar/MarginContainer/HBoxContainer" index="0"]
text = "Character Creation"

[node name="Content" parent="Layout" index="1"]
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MainContainer" type="VBoxContainer" parent="Layout/Content" index="0"]
layout_mode = 2

[node name="SelectionContainer" type="HBoxContainer" parent="Layout/Content/MainContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RaceSelection" type="PanelContainer" parent="Layout/Content/MainContainer/SelectionContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Layout/Content/MainContainer/SelectionContainer/RaceSelection" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="Layout/Content/MainContainer/SelectionContainer/RaceSelection/VBoxContainer" index="0"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Race"

[node name="RaceList" type="ItemList" parent="Layout/Content/MainContainer/SelectionContainer/RaceSelection/VBoxContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3

[node name="RaceDescription" type="RichTextLabel" parent="Layout/Content/MainContainer/SelectionContainer/RaceSelection/VBoxContainer" index="2"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="ClassSelection" type="PanelContainer" parent="Layout/Content/MainContainer/SelectionContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Layout/Content/MainContainer/SelectionContainer/ClassSelection" index="0"]
layout_mode = 2
text = "Class"

[node name="ClassList" type="ItemList" parent="Layout/Content/MainContainer/SelectionContainer/ClassSelection" index="1"]
layout_mode = 2
size_flags_vertical = 3

[node name="ClassDescription" type="RichTextLabel" parent="Layout/Content/MainContainer/SelectionContainer/ClassSelection" index="2"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="BottomContainer" type="VBoxContainer" parent="Layout/Content/MainContainer" index="1"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NameContainer" type="PanelContainer" parent="Layout/Content/MainContainer/BottomContainer" index="0"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Layout/Content/MainContainer/BottomContainer/NameContainer" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="NameInput" type="LineEdit" parent="Layout/Content/MainContainer/BottomContainer/NameContainer/MarginContainer" index="0"]
layout_mode = 2
placeholder_text = "Enter character name..."

[node name="ErrorLabel" type="Label" parent="Layout/Content/MainContainer/BottomContainer" index="1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.2, 0.2, 1.0)
horizontal_alignment = 1

[node name="CreateButton" type="Button" parent="Layout/Content/MainContainer/BottomContainer" index="2"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Create Character"
